--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
       </section>
 
       <style>
-         .main {/*border: 1px black solid;*/ display: flex;flex-direction: row;}
-         /*.sub {border: 1px black solid;}*/
+         .main { display: flex;flex-direction: row;}
+         
 
          @media (max-width: 800px){.sub{width: 100% !important;} .main{flex-direction: column;} #id1{display: none;}}
 
